--- a/500.html
+++ b/500.html
@@ -84,7 +84,7 @@
     </style>
 
 
-<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/500.html/",                        "name": ""                    }                }                    ]    }</script>
+<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/",                        "name": ""                    }                }                    ]    }</script>
 
 
 </head>
@@ -100,8 +100,9 @@
         <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
             <p>Latest</p>
-            <a href="https://bosniana.org/blog/edu-112024/">Release Notes</a>
-            <a href="https://bosniana.org/downloads/">Download</a>
+            <a href="https://bosniana.org/blog/edu-112024/">Release Notes | EDU</a>
+            <a href="https://bosniana.org/blog/home-092024/">Release Notes | HOME</a>
+            <a href="https://bosniana.org/downloads/">Downloads</a>
             <p></p>
             <a href="https://bosniana.org/wiki/installation-guide/" target="blank">Installation Guide</a>
             <a href="https://bosniana.org/wiki/">Documentation</a>
@@ -269,16 +270,24 @@
 													<a href="##">bosniana.org</a> developed by:
 													<a href="##">Denis Maslo</a>
         </p>
-        <p>
-          <i class="ri-mail-send-line"></i>
-          <a href="mailto:contact@bosniana.org">
-            <span class="text-light ml-1">Contact</span>
+
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
+          <span class="text-light ml-1">
+          <a href="mailto:dennios@duck.com">
+             dennios@duck.com
           </a>
+          </span>
         </p>
         <p>
           <i class="ri-mail-send-line"></i>
           <a href="mailto:openbosniana_dev@bosniana.org">
             <span class="text-light ml-1">Developers</span>
+          </a>
+        </p>
+        <p>
+          <i class="ri-mail-send-line"></i>
+          <a href="mailto:info@bosniana.org">
+            <span class="text-light ml-1">Info</span>
           </a>
         </p>
         <div class="linija-footer mt-1 mb-1"></div>
