--- a/gallery/2/index.html
+++ b/gallery/2/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Gallery | 2 | OpenBosniana OS | </title>
+    <title> Gallery | OpenBosniana OS | </title>
     <meta name="description" content="OpenBosniana OS | Free, lightweight, GNU/Linux operating system">
     <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
     <meta name="author" content="Denis Maslo">
@@ -21,8 +21,8 @@
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta property="og:type" content="website">
     <link rel="canonical" href="https://www.bosniana.org/">
-    <link rel="alternate" type="/application/rss+xml" title="OpenBosniana OS" href="rss.xml">
-    <link rel="manifest" href="/assets/favicon/manifest.json">
+    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
+    <link rel="manifest" href="assets/favicon/manifest.json">
     <meta property="og:title" content="">
     <meta property="og:url" content="https://bosniana.org/gallery/">
     <meta property="og:description" content="">
@@ -30,7 +30,7 @@
     <meta property="og:image" content="">
 
     <link rel="canonical" href="https://bosniana.org/gallery/">
-    <link rel="alternate" type="/application/rss+xml" title="OpenBosniana OS" href="/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="/rss.xml">
 
     <meta property="og:url" content="https://bosniana.org/">
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
@@ -84,7 +84,7 @@
     </style>
 
 
-<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/gallery/",                        "name": "Gallery"                    }                }                    ]    }</script>
+<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/",                        "name": "Gallery"                    }                }                    ]    }</script>
 
 
 </head>
@@ -100,8 +100,9 @@
         <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
             <p>Latest</p>
-            <a href="https://bosniana.org/blog/edu-112024/">Release Notes</a>
-            <a href="https://bosniana.org/downloads/">Download</a>
+            <a href="https://bosniana.org/blog/edu-112024/">Release Notes | EDU</a>
+            <a href="https://bosniana.org/blog/home-092024/">Release Notes | HOME</a>
+            <a href="https://bosniana.org/downloads/">Downloads</a>
             <p></p>
             <a href="https://bosniana.org/wiki/installation-guide/" target="blank">Installation Guide</a>
             <a href="https://bosniana.org/wiki/">Documentation</a>
@@ -195,7 +196,7 @@
         <div class="bodymargin"></div>
 <div class="container">
                 <div class="card-body mt-2 pt-2"><br>
-                    <h3 class="card-title-b text-info-c"><span class="nunito-dark">Gallery | 2</span></h3>
+                    <h3 class="card-title-b text-info-c"><span class="nunito-dark">Gallery</span></h3>
 
                 </div>
   <br>
@@ -206,6 +207,7 @@
   <section id="content">
     <div class="box alt">
       <div class="row-gallery 50% uniform">
+
 
         <div class="4u  6u(xsmall)">
           <a class="image-gallery fit" href="/assets/gallery/kicker.png">
@@ -334,16 +336,24 @@
 													<a href="##">bosniana.org</a> developed by:
 													<a href="##">Denis Maslo</a>
         </p>
-        <p>
-          <i class="ri-mail-send-line"></i>
-          <a href="mailto:contact@bosniana.org">
-            <span class="text-light ml-1">Contact</span>
+
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
+          <span class="text-light ml-1">
+          <a href="mailto:dennios@duck.com">
+             dennios@duck.com
           </a>
+          </span>
         </p>
         <p>
           <i class="ri-mail-send-line"></i>
           <a href="mailto:openbosniana_dev@bosniana.org">
             <span class="text-light ml-1">Developers</span>
+          </a>
+        </p>
+        <p>
+          <i class="ri-mail-send-line"></i>
+          <a href="mailto:info@bosniana.org">
+            <span class="text-light ml-1">Info</span>
           </a>
         </p>
         <div class="linija-footer mt-1 mb-1"></div>
