--- a/bs/gallery/index.html
+++ b/bs/gallery/index.html
@@ -280,7 +280,7 @@
           </a>
         </li>
         <li class="p-3">
-          <a href="/gallery/2">
+          <a href="/bs/gallery/2">
             <p class="btn btn-raised text-center">Naprijed</p>
           </a>
         </li>
