--- a/index.html
+++ b/index.html
@@ -533,6 +533,13 @@
                         <tbody>
 
             <tr>
+                <td>all</td>
+                <td><a href="##">desktop-base</a></td>
+                <td>2024.12.09</td>
+                <td>2024-12-09 09:51:14</td>
+            </tr>
+
+            <tr>
                 <td>amd64</td>
                 <td><a href="##">openbosniana-menu</a></td>
                 <td>2024.11.13</td>
@@ -593,13 +600,6 @@
                 <td><a href="##">openbosniana-education-kde</a></td>
                 <td>2024.11.10</td>
                 <td>2024-11-10 01:55:00</td>
-            </tr>
-
-            <tr>
-                <td>amd64</td>
-                <td><a href="##">wpasupplicant</a></td>
-                <td>2.10-12+deb12u2</td>
-                <td>2024-11-09 05:47:29</td>
             </tr>
 
 
